Now displaying properties.

--- a/IOBrowser/UI/Base.lproj/MainWindowController.xib
+++ b/IOBrowser/UI/Base.lproj/MainWindowController.xib
@@ -7,16 +7,16 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MainWindowController" customModule="IOBrowser" customModuleProvider="target">
             <connections>
-                <outlet property="objectsController" destination="uah-mw-q2d" id="rme-ht-dMG"/>
-                <outlet property="objectsView" destination="XY4-0b-KB7" id="yof-dW-2p4"/>
+                <outlet property="outlineView" destination="XY4-0b-KB7" id="MnL-kv-JbB"/>
                 <outlet property="propertiesView" destination="Fob-Ee-LIc" id="jiw-mE-36m"/>
+                <outlet property="treeController" destination="uah-mw-q2d" id="EDZ-qQ-gTb"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="3Jc-9C-AuF"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="IOBrowser" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="MainWindow" animationBehavior="default" titlebarAppearsTransparent="YES" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
+        <window title="IOBrowser" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="MainWindow" animationBehavior="default" id="QvC-M9-y7g">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="800" height="515"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1025"/>
